@@ -1,3 +1,11 @@
+2008-01-23  Don Porter	<dgp@users.sourceforge.net>
+
+	* generic/tclCompile.h:	Demote TclCompEvalObj() from internal stubs to
+	* generic/tclInt.decls:	a MODULE_SCOPE routine declared in tclCompile.h.
+
+	* generic/tclIntDecls.h:	make genstubs
+	* generic/tclStubInit.c:
+
 2008-01-22  Don Porter	<dgp@users.sourceforge.net>
 
 	* generic/tclTimer.c (AfterProc):	Replace Tcl_EvalEx() with
